--- a/config/i3/config
+++ b/config/i3/config
@@ -17,8 +17,8 @@ set $mod Mod4
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
-
+# font pango:DejaVu Sans Mono 8
+font pango: System San Francisco Display 11
 
 
 # Before i3 v4.8, we used to recommend this one as the default:
@@ -162,11 +162,34 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+set $bg-color 	         #2f343f
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+
+# window colors
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.unfocused        $inactive-bg-color 	$inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $inactive-bg-color 	$inactive-bg-color $inactive-text-color #00ff00
+client.urgent 			$urgent-bg-color 	$urgent-bg-color   $text-color 			#00ff00
+
+# hide_edge_borders both
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status
         tray_output primary
+		colors {
+				background	$bg-color
+				separator	#757575
+				#                  border             background         text
+				focused_workspace  $bg-color          $bg-color          $text-color
+				inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+				urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+		}
 }
 
 
@@ -210,4 +233,7 @@ assign [class="Pavucontrol"] $workspace10
 
 # Keybinding to shift current workspace to other monitor
 bindsym $mod+m move workspace to output left
+
+
+
 
