--- a/config/i3/config
+++ b/config/i3/config
@@ -42,7 +42,15 @@ bindsym $mod+Shift+q kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec rofi -show run \
+						 -lines 10  \
+						 -glob \
+						 -eh 1 -width 100 -padding 8 \
+						 -opacity "85" -bw 0 \
+						 -bc "$bg-color" -bg "$bg-color" \
+						 -fg "$text-color" -hlbg "$bg-color" \
+						 -hlfg "#9575cd" -font "System San Francisco Display 17"
 
 # change focus
 bindsym $mod+j focus left
@@ -91,6 +99,9 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
+# lockbutton
+bindsym $mod+Shift+ctrl+l exec i3lock --color "$bg-color"
+
 # focus the child container
 #bindsym $mod+d focus child
 set $randomsymbols ""
@@ -104,6 +115,8 @@ set $workspace7  "7:"
 set $workspace8  "8:"
 set $workspace9  "9:"
 set $workspace10 "10: "
+
+
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -180,8 +193,11 @@ client.urgent 			$urgent-bg-color 	$urgent-bg-color   $text-color 			#00ff00
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
-        tray_output primary
+        # status_command <any shell script>
+		# status_command i3status
+		# ~/.config/i3/i3blocks.conf
+        status_command i3blocks -c /home/alex/.config/i3/i3blocks.conf 
+		tray_output primary
 		colors {
 				background	$bg-color
 				separator	#757575
@@ -190,6 +206,7 @@ bar {
 				inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
 				urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
 		}
+		position top
 }
 
 
@@ -234,6 +251,6 @@ assign [class="Pavucontrol"] $workspace10
 # Keybinding to shift current workspace to other monitor
 bindsym $mod+m move workspace to output left
 
-
+exec --no-startup-id compton -f
 
 
